--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@babel/runtime": "^7.17.9",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
